# NetWalk

./: .gitmodules  README.md
.github/workflows/: android-release.yml
androidApp/: .gitignore  justfile
androidApp/app/: build.gradle.kts  proguard-rules.pro
androidApp/app/src/main/: AndroidManifest.xml
androidApp/app/src/main/cpp/: CMakeLists.txt
androidApp/app/src/main/cpp/iperf/: iperf_config_android.h  iperf_jni.c
androidApp/app/src/main/kotlin/edu/pwr/zpi/netwalk/: Logging.kt  MainActivity.kt
androidApp/app/src/main/kotlin/edu/pwr/zpi/netwalk/collector/: DataCollector.kt  MeasurementConditionChecker.kt
androidApp/app/src/main/kotlin/edu/pwr/zpi/netwalk/fetcher/: FrequencyCalculator.kt  NetworkConverter.kt  NetworkInfoFetcher.kt
androidApp/app/src/main/kotlin/edu/pwr/zpi/netwalk/iperf/: IperfRunner.kt
androidApp/app/src/main/kotlin/edu/pwr/zpi/netwalk/location/: LocationFetcher.kt
androidApp/app/src/main/kotlin/edu/pwr/zpi/netwalk/network/: BatchStore.kt  NetworkClient.kt
androidApp/app/src/main/kotlin/edu/pwr/zpi/netwalk/settings/: SettingsRepository.kt
androidApp/app/src/main/kotlin/edu/pwr/zpi/netwalk/system/: SystemInfoFetcher.kt
androidApp/app/src/main/kotlin/edu/pwr/zpi/netwalk/ui/: ChartsScreen.kt  IperfLogScreen.kt  NetworkInfoScreen.kt  NetworkViewModel.kt  SettingsScreen.kt
androidApp/app/src/main/res/values/: themes.xml
androidApp/gradle/: libs.versions.toml
backend/: .dockerignore  Dockerfile  docker-compose.yml  justfile  pyproject.toml  schema.sql
backend/app/: analytics.py  config.py  main.py  models.py  routes.py  schemas.py
backend/init-scripts/: init-postgis.sql
backend/tests/: conftest.py  test_api.py  test_cpu_analytics.py  test_new_model_fields.py  test_pagination.py  test_ul_dl_stats.py
backend/tests/data/: example_payload_no_iperf.json  example_payload_tcp.json  example_payload_udp.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js
frontend/src/components/: Heatmap.css  Heatmap.js  KPICard.css  KPICard.js  LastSession.css  LastSession.js  Metric.css  Metric.js  PhoneList.css  PhoneList.js  RecentSessions.css  RecentSessions.js  Sidebar.css  Sidebar.js
frontend/src/pages/: Dashboard.css  Dashboard.js  Phones.css  Phones.js
frontend/src/styles/: global.css
src/: App.css  App.js
